UI/css/main.css
body{
    background-color: white;
    font-family: 'Roboto';
    font-size: 22px;
    /* background-repeat: no-repeat; */
    background-image: url(../Images/maintenance.jpg);
 }
/* navigation bar*/ 
.nav-bar {
    top: 0;
    width: 99%;
    background-color: rgba(44, 14, 14, 0.74);
    position: -webkit-sticky; /* Safari */
    position: sticky;
            
}

.sticky{
    position: fixed;
    top: 0;
    width: 100%;
    
}
.sticky + .main + .sidenav{
    padding-top: 102px;
}
.nav-bar>ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
    overflow: hidden;    
 } 
.nav-bar>ul>li {
    float: left;
    border-right: 1px solid #bbb;
}

.nav-bar>ul>li>a {
    display: block;
    color: rgb(247, 243, 243);
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
}
.nav-bar-right{
   float: right;
}
.nav-bar-right>ul{
    list-style-type: none;
    margin: 0;
    padding: 0;
    overflow: hidden;
}
.nav-bar-right>ul>li{
    display: inline;
    text-align: center;
    border-right: 1px solid rgba(252, 249, 249, 0.952);

}
.nav-bar-right>ul>li>a{
    display: inline-flex;
    color: rgb(247, 243, 243);
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
}

.active {
    background-color: rgb(24, 202, 233);
}
 nav li a:hover {
    background-color: #111;
}
/* navigation bar*/
/*flex-box*/
.flex-container{
    display: flex;
    display: -webkit-flex;
    flex-flow: row wrap;
    justify-content: space-around;
    height: 50%;
    align-items: baseline;
    align-content: center; 
    z-index: -1;  
     
}
.flex-container>div{
    background-color: darkgray;
    width:70%;
    margin: 10px;
    text-align: center;
    color:rgb(12, 12, 12);
    background-image: url(../Images/maintenance2.jpg);
    opacity: 0.8;
}
.flex-container>div>p{
    background-color: rgba(169, 169, 169, 0.76);
    
}
.flex-container>div>h4{
    background-color: rgba(169, 169, 169, 0.445);
    
}
.flex-container.footer{
    height: 7px;
    align-content: flex-end;
    justify-content: center;
    background-color:rgb(243, 202, 21);
    opacity: 0.5;
}
.flex-container>form{
    background-color: rgba(192, 183, 183, 0.562);
    display: table;
    width: 30%;
    align-items: center;
    margin-top: 10px;
    font-family: "Bad script";
    
}
.flex-container>:hover{
    background-color: rgba(0, 0, 0, 0.267);
}

.newreq {
    display: flex;
    width: 100%;
    margin-left: 40px;
    left: 40px;
    height: 90%;
    z-index: -1;  
    
}
.newreq>form{
    background-color: rgba(80, 94, 94, 0.863);
    width: 90%;
    margin-left: 40px;
    /* display: table;
    overflow-y: scroll; */
    font-family: "Bad script";
}
.newreq>form:hover{
    background-color: rgba(80, 94, 94, 0.763);
}
.form-input>select{
    height: 40px;
}
#category, #title, #freq, #new, #description {
    width: 90%;
    margin: 10px 10px 10px 10px;
}
#Create{
    margin-right: 10%;
    z-index: -1;  

}
#sentitems{
    display: table;
    margin-left: 40px;
    left: 40px;
    height: 90%;
    z-index: -1;  

}
.flex-container>form{
    background-color: rgba(192, 183, 183, 0.562);
    display: table;
    width: 90%;
    align-items: center;
    margin-top: 10px;
 }
 
table{
    border-collapse: collapse;
    background-color: white;
    width: 90%;
    margin-left: 40px;
    display: table;
       
}

table, th, td {
    border-bottom: 1px solid #ddd;
}
th, td{
    padding: 15px;
    text-align: left;
}
tr:hover {
    background-color: #548d8f;
}
tr:nth-child(odd) {
    background-color: #f2f2f2;
}
th{
    background-color: rgba(22, 223, 223, 0.849)
}
.green{
    background-color: green;
    
}
.purple{
    background-color: rgb(134, 75, 134);
}
.red{
    background-color: red;
}

th{
    height: 50px;
}
/* #freq {
    width: 100%;
}
#new {
    width: 100%;
} */
/*flex-box*/
.banner{
    max-height: 7%;
    text-align: center;
}
.footer{
    position: fixed;
    bottom: 0;
    width: 100%;
}

/*form Input methods */
input[type=text]{
    width: 90%;
    padding: 12px;
    border: 1px solid #ccc;
    border-radius: 4px;
    resize: vertical;
}
input[type=email]{
    width: 90%;
    padding: 12px;
    border: 1px solid #ccc;
    border-radius: 4px;
    resize: vertical;
}
input[type=password]{
    width: 90%;
    padding: 12px;
    border: 1px solid #ccc;
    border-radius: 4px;
    resize: vertical;
}
input[type=submit]{
    width: 50%;
    background-color: rgb(21, 180, 243);
    color: white;
    padding: 12px 20px;
    border: none;
    border-radius: 4px;
    cursor: pointer;
    float: right;
}
input[type=submit]:hover {
    background-color: rgb(21, 99, 243);
        
}
/*Input methods */
/*The sidebar*/
.sidenav {
    height: 100%;
    width: 15%;
    position: fixed;
    z-index: -1;  
    top: 10%;
    left: 0;
    background-color: rgba(17, 17, 17, 0.671);
    overflow-x: hidden;
    padding-top: 20px;
    font-family: "Bad script";
}
.sidenav a{
    padding: 6px 8px 6px 16px;
    text-decoration: none;
    color: rgba(252, 249, 249, 0.952);
    display: block;
}
.sidenav a:hover{
    color: rgb(9, 245, 245);
    background-color: white;
}
.sidenav a:active{
    color: rgb(9, 245, 245);
    background-color: white;
}
.main {
    margin-left: 12%;
    padding: 0px 10px;
    overflow-x: auto;
    overflow-y: auto;
}
#h4{
    text-align: center;
}

/*The sidebar*/
/* media queries*/ 

@media screen and (max-width:1000px){
    div.flex-container>form{
        width:40%;
    }
    input[type=text]{
        width: 40%;
    }
    div.flex-container.sentreq{
        overflow-y: auto;
        overflow-x: auto;
        width: 800px;
    }
    th, td{
        padding: 10px;
        text-align: center;
    }    
}

@media screen and (max-width:600px){
    div.nav-bar-right,
    div.nav-bar-right>ul>li,
    div.nav-bar-right>ul>li>a
    {    
        display:block;
        float: left;
    }
    nav.nav-bar{
        width:auto;
        min-height:auto; 
    }
    nav.nav-bar>ul>li,
    div.nav-bar-right>ul>li
    {
        border-right: 0px;
        /* border-bottom: 1px solid #bbb; */
    }
    div.flex-container>div{
        width:400px;
        height:40%;
        
    }
    div.flex-container>form{
        width:60%;
    }
    input[type=text]{
        width: 60%;
    } 
    div.flex-container.sentreq{
        overflow-y: auto;
        overflow-x: auto;
        width: 600px;
        z-index: 1;
        
    }
     div.flex-container.sentreq>table{
       font-size: 15px;
    }    

}
@media screen and (max-width:500px){
    div.flex-container>form{
        width:50%;
    }
    input[type=text]{
        width: 50%;
    }
    div.sidenav{
        padding-top: 15%;
        width: 30%;
    }
    div.sidenav a{
        font-size: 18px;
    }    
    
}
@media screen and (max-width:450px){
    div.flex-container>div{
        width:80%;
        height:40%;
    }
    div.flex-container>form{
        width:100%;
    }
    div>input[type=text]{
        width: 80%;
    }
    div>input[type=email]{
        width: 80%;
    }    
    div>input[type=password]{
        width: 80%;
    }  
    div.sidenav{
        padding-top: 15%;
        width: 30%;
    }
    div.sidenav a{
        font-size: 18px;
    }     
}
@media screen and (max-width:380px){
    div.flex-container>div{
        width:80%;
        height:30%;
    }
    div.sidenav{
        padding-top: 15%;
        width: 30%;
    }
    div.sidenav a{
        font-size: 18px;
    }   
     
}
/* media queries*/ 

/* The actual timeline (the vertical ruler) */
.timeline {
    position: relative;
    max-width: 1200px;
    margin: 0 auto;
}

/* The actual timeline (the vertical ruler) */
.timeline::after {
    content: '';
    position: absolute;
    width: 6px;
    background-color: rgb(155, 143, 143);
    top: 0;
    bottom: 0;
    left: 50%;
    margin-left: -3px;
}

/* Container around content */
.container {
    padding: 10px 40px;
    position: relative;
    background-color: inherit;
    width: 45%;
}

/* The circles on the timeline */
.container::after {
    content: '';
    position: absolute;
    width: 25px;
    height: 25px;
    right: -17px;
    background-color: rgba(255, 255, 255, 0.555);
    border: 4px solid #FF9F55;
    top: 15px;
    border-radius: 50%;
    z-index: 1;
}

/* Place the container to the left */
.left {
    left: 0;
}

/* Place the container to the right */
.right {
    left: 50%;
}

/* Add arrows to the left container (pointing right) */
.left::before {
    content: " ";
    height: 0;
    position: absolute;
    top: 22px;
    width: 0;
    z-index: 1;
    right: 30px;
    border: medium solid white;
    border-width: 10px 0 10px 10px;
    border-color: transparent transparent transparent white;
}

/* Add arrows to the right container (pointing left) */
.right::before {
    content: " ";
    height: 0;
    position: absolute;
    top: 22px;
    width: 0;
    z-index: 1;
    left: 30px;
    border: medium solid white;
    border-width: 10px 10px 10px 0;
    border-color: transparent white transparent transparent;
}

/* Fix the circle for containers on the right side */
.right::after {
    left: -16px;
}

/* The actual content */
.content {
    padding: 20px 30px;
    background-color: white;
    position: relative;
    z-index: -1;
    border-radius: 6px;
}
/* buttons*/
.btn {
    border: none; /* Remove borders */
    color: white; /* Add a text color */
    padding: 10px; /* Add some padding */
    cursor: pointer; /* Add a pointer cursor on mouse-over */
}
.success {background-color: #4CAF50;} /* Green */
.success:hover {background-color: #46a049;}

.info {background-color: #2196F3;} /* Blue */
.info:hover {background: #0b7dda;}

.warning {background-color: #ff9800;} /* Orange */
.warning:hover {background: #e68a00;}

.danger {background-color: #f44336;} /* Red */ 
.danger:hover {background: #da190b;}

.default {background-color: #e7e7e7; color: black;} /* Gray */ 
.default:hover {background: #ddd;}
.pending{
	background-color:green;
}

/* Media queries - Responsive timeline on screens less than 600px wide */
@media screen and (max-width: 600px) {
  /* Place the timelime to the left */
  .timeline::after {
    left: 31px;
  }
  
  /* Full-width containers */
  .container {
    width: 100%;
    padding-left: 70px;
    padding-right: 25px;
  }
  
  /* Make sure that all arrows are pointing leftwards */
  .container::before {
    left: 60px;
    border: medium solid white;
    border-width: 10px 10px 10px 0;
    border-color: transparent white transparent transparent;
  }

  /* Make sure all circles are at the same spot */
  .left::after, .right::after {
    left: 15px;
  }
  
  /* Make all right containers behave like the left ones */
  .right {
    left: 0%;
  }
}
.collapsible {
    background-color: #777;
    color: white;
    cursor: pointer;
    padding: 18px;
    width: 50%;
    border: none;
    text-align: left;
    outline: none;
    font-size: 15px;
}

.active, .collapsible:hover {
    background-color: #555;
}

.collapsible:after {
    content: '\002B';
    color: white;
    font-weight: bold;
    float: right;
    margin-left: 5px;
}

.active:after {
    content: "\2212";
}

.co-content {
    padding: 0 18px;
    max-height: 0;
    overflow: hidden;
    transition: max-height 0.2s ease-out;
    background-color: #f1f1f1;
}

